WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78608
[BlackBerry] Dragging a selection handle outside of the content bounding box does not update the selection range correctly
https://bugs.webkit.org/show_bug.cgi?id=78608
Summary
[BlackBerry] Dragging a selection handle outside of the content bounding box ...
edbaker
Reported
2012-02-14 08:50:26 PST
The selection point that is not being dragged can change causing the selection range to alter in a manner that is inconsistent with where the handle is being dragged
Attachments
Patch to fix out of bounds selection bug
(9.06 KB, patch)
2012-02-14 09:44 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
Patch to fix out of bounds selection bug
(9.05 KB, patch)
2012-02-14 09:56 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
reverts revision 107719
(8.38 KB, patch)
2012-02-24 09:09 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
reverts revision 107719
(8.38 KB, patch)
2012-02-24 10:35 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
Patch to fix out of bounds selection bug
(13.96 KB, patch)
2012-02-25 11:54 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
Patch to fix out of bounds selection bug
(13.96 KB, patch)
2012-02-25 12:01 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
Patch to fix out of bounds selection bug
(13.23 KB, patch)
2012-02-27 06:19 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
Patch to fix out of bounds selection bug
(14.73 KB, patch)
2012-02-27 09:28 PST
,
edbaker
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
edbaker
Comment 1
2012-02-14 09:44:52 PST
Created
attachment 126988
[details]
Patch to fix out of bounds selection bug
WebKit Review Bot
Comment 2
2012-02-14 09:48:35 PST
Attachment 126988
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource From git://git.webkit.org/WebKit 6640514..bdb5923 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 107712 = 66405148c5f7c19d2179ddbd3d3d5ee458d4b6d6
r107713
= bdb5923a53a7eb41b8caa692aeda37d9f1396079 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Applying: [Mac][Win][WK2] Switch to RFC 6455 protocol for WebSockets Using index info to reconstruct a base tree... <stdin>:1578: trailing whitespace. <stdin>:1647: trailing whitespace. <stdin>:1657: trailing whitespace. <stdin>:1672: trailing whitespace. return 0; <stdin>:1674: trailing whitespace. warning: squelched 7 whitespace errors warning: 12 lines add whitespace errors. Falling back to patching base and 3-way merge... warning: too many files (created: 168776 deleted: 3), skipping inexact rename detection Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Auto-merging Source/WebKit2/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit2/ChangeLog Auto-merging Tools/ChangeLog CONFLICT (content): Merge conflict in Tools/ChangeLog Failed to merge in the changes. Patch failed at 0001 [Mac][Win][WK2] Switch to RFC 6455 protocol for WebSockets When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
edbaker
Comment 3
2012-02-14 09:56:07 PST
Created
attachment 126991
[details]
Patch to fix out of bounds selection bug
Rob Buis
Comment 4
2012-02-14 10:33:48 PST
Comment on
attachment 126991
[details]
Patch to fix out of bounds selection bug LGTM.
WebKit Review Bot
Comment 5
2012-02-14 11:40:14 PST
Comment on
attachment 126991
[details]
Patch to fix out of bounds selection bug Clearing flags on attachment: 126991 Committed
r107719
: <
http://trac.webkit.org/changeset/107719
>
WebKit Review Bot
Comment 6
2012-02-14 11:40:20 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2012-02-15 01:10:23 PST
Attachment 126991
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: [Mac][Win][WK2] Switch to RFC 6455 protocol for WebSockets Using index info to reconstruct a base tree... <stdin>:1578: trailing whitespace. <stdin>:1647: trailing whitespace. <stdin>:1657: trailing whitespace. <stdin>:1672: trailing whitespace. return 0; <stdin>:1674: trailing whitespace. warning: squelched 7 whitespace errors warning: 12 lines add whitespace errors. Falling back to patching base and 3-way merge... warning: too many files (created: 168753 deleted: 3), skipping inexact rename detection Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/wk2/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Auto-merging Source/WebCore/css/CSSCalculationValue.cpp Auto-merging Source/WebCore/css/CSSCalculationValue.h Auto-merging Source/WebCore/css/CSSParser.cpp Auto-merging Source/WebKit/mac/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit/mac/ChangeLog Auto-merging Source/WebKit2/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit2/ChangeLog Auto-merging Tools/ChangeLog CONFLICT (content): Merge conflict in Tools/ChangeLog Failed to merge in the changes. Patch failed at 0001 [Mac][Win][WK2] Switch to RFC 6455 protocol for WebSockets When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
edbaker
Comment 8
2012-02-24 09:09:09 PST
Created
attachment 128741
[details]
reverts revision 107719
edbaker
Comment 9
2012-02-24 10:35:40 PST
Created
attachment 128757
[details]
reverts revision 107719
edbaker
Comment 10
2012-02-25 11:54:30 PST
Created
attachment 128877
[details]
Patch to fix out of bounds selection bug
edbaker
Comment 11
2012-02-25 11:55:18 PST
Needs to reopened as fix introduced a regression that needs to be resolved
WebKit Review Bot
Comment 12
2012-02-25 11:58:26 PST
Attachment 128877
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Sou..." exit_code: 1 Source/WebKit/blackberry/WebKitSupport/SelectionHandler.cpp:762: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
edbaker
Comment 13
2012-02-25 12:01:26 PST
Created
attachment 128878
[details]
Patch to fix out of bounds selection bug
edbaker
Comment 14
2012-02-27 06:19:23 PST
Created
attachment 129026
[details]
Patch to fix out of bounds selection bug
edbaker
Comment 15
2012-02-27 09:28:10 PST
Created
attachment 129053
[details]
Patch to fix out of bounds selection bug
Antonio Gomes
Comment 16
2012-02-27 10:20:46 PST
Comment on
attachment 129053
[details]
Patch to fix out of bounds selection bug View in context:
https://bugs.webkit.org/attachment.cgi?id=129053&action=review
> Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp:361 > + targetPoint = IntPoint(targetPoint.x() < targetFrameRect.x() ? targetFrameRect.x() : std::min(targetPoint.x(), targetFrameRect.maxX()), > + targetPoint.y() < targetFrameRect.y() ? targetFrameRect.y() : std::min(targetPoint.y(), targetFrameRect.maxY()));
looks mis-indented.
> Source/WebKit/blackberry/WebKitSupport/DOMSupport.h:75 > +WebCore::IntPoint convertPointToFrame(const WebCore::Frame* sourceFrame, const WebCore::Frame* targetFrame, const WebCore::IntPoint& sourcePoint, const bool clampToTargetFrame = false);
'const' for the bool is uncommon, but that is ok.
WebKit Review Bot
Comment 17
2012-02-27 12:03:26 PST
Comment on
attachment 129053
[details]
Patch to fix out of bounds selection bug Clearing flags on attachment: 129053 Committed
r109013
: <
http://trac.webkit.org/changeset/109013
>
WebKit Review Bot
Comment 18
2012-02-27 12:03:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug