[BlackBerry] Dragging a selection handle outside of the content bounding box does not update the selection range correctly https://bugs.webkit.org/show_bug.cgi?id=78608

Ensure that when selection handles leave the content bounding box that
the handle not being dragged remains fixed. Do not applying padding to
a direction that would cause the selection to shrink when performing
the handle direction detection.

Patch by Ed Baker <edbaker@rim.com> on 2012-02-14
Reviewed by Rob Buis.

* blackberry/WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::directionOfPointRelativeToRect):
(BlackBerry::WebKit::SelectionHandler::extendSelectionToFieldBoundary):
(BlackBerry::WebKit::SelectionHandler::clipPointToFocusNode):
(BlackBerry::WebKit::SelectionHandler::setSelection):
* blackberry/WebKitSupport/SelectionHandler.h:

Canonical link: https://commits.webkit.org/95565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107719 268f45cc-cd09-0410-ab3c-d52691b4dbfc