Source/WebKit/blackberry/WebKitSupport/SelectionHandler.h
@@ -77,6 +77,7 @@ private:
     WebCore::Node* DOMContainerNodeForVisiblePosition(const WebCore::VisiblePosition&) const;
     bool shouldUpdateSelectionOrCaretForPoint(const WebCore::IntPoint&, const WebCore::IntRect&, bool startCaret = true) const;
     unsigned short extendSelectionToFieldBoundary(bool isStartHandle, const WebCore::IntPoint& selectionPoint, WebCore::VisibleSelection& newSelection);
+    WebCore::IntPoint clipPointToFocusNode(const WebCore::IntPoint&);
 
     WebPagePrivate* m_webPage;
 
